# Formality_Detection

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data_preparation.py  env.example  evaluate.py  formality_detection.py  main.py  plot_results.py  pyproject.toml  requirements.txt  setup.py
artifacts/: incorrect_predictions_deberta-large-formality-ranker_results_1743086277.csv.txt  incorrect_predictions_openai_gpt4o_mini_results_1743098317.csv.txt  incorrect_predictions_roberta-base-formality-ranker_results_1743086643.csv.txt  incorrect_predictions_rule-based_results_1743095216.csv.txt  incorrect_predictions_xlmr_formality_classifier_results_1743087055.csv.txt
data/: answers  dataset.csv
results/: deberta-large-formality-ranker_results_1743086277.csv  openai_gpt4o_mini_results_1743098317.csv  roberta-base-formality-ranker_results_1743086643.csv  rule-based_results_1743095216.csv  xlmr_formality_classifier_results_1743087055.csv
src/formality_detection/: __init__.py  main.py
src/formality_detection/config/: __init__.py  settings.py
src/formality_detection/core/: __init__.py  detectors.py  evaluation.py
src/formality_detection/utils/: helpers.py
